# GitHub-Trending-Scraper

./: .gitignore  README.md  docker-compose.yml  generate.py  install.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  run_scraper.py  setup.py
.github/workflows/: ci.yml  schedule.yml
api/: __init__.py  main.py  routes.py
data/: github.db  trending.json
data/backups/: trending_20251119_151539.csv  trending_20251119_153032.csv
scraper/: __init__.py  fetcher.py  parser.py  runner.py  storage.py
tests/: conftest.py  test_fetcher.py  test_parser.py  test_storage.py
web/: app.js  index.html  style.css
